# aide

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README-snprintf  SECURITY.md  Todo  acconfig.h  acinclude.m4  aide.spec.in  autogen.sh  config.h.in  configure.ac  configure.in  install-sh  mkrelease.sh  version.m4  version.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: linux.yml  macos.yml
contrib/: aide-attributes.sh  bzip2.sh  gpg2_check.sh  gpg2_update.sh  gpg_check.sh  gpg_update.sh  mkdailyrelease.sh  mkgitsnapshot.sh  sshaide.sh
doc/: .cvsignore  Makefile.am  aide.1  aide.1.in  aide.1.ru  aide.1.ru.in  aide.conf.5  aide.conf.5.in  aide.conf.5.ru  aide.conf.5.ru.in  aide.conf.in  manual.html  release.HOWTO
include/: Makefile.am  aide.h  attributes.h  base64.h  be.h  commandconf.h  compare_db.h  conf_ast.h  conf_eval.h  conf_lex.h  db.h  db_config.h  db_disk.h  db_file.h  db_lex.h  db_line.h  db_list.h  db_sql.h  do_md.h  e2fsattrs.h  error.h  errorcodes.h  file.h  fopen.h  gen_list.h  getopt.h  hashsum.h  list.h  locale-aide.h  log.h  md.h  progress.h  queue.h  report.h  report_json.h  report_ndjson.h  report_plain.h  rx_rule.h  seltree.h  seltree_struct.h  (+5 more)
po/: LINGUAS  Makefile.am  POTFILES.in  aide.mo  messages.po  ru.po
src/: .cvsignore  Makefile.am  aide.c  attributes.c  base64.c  be.c  commandconf.c  compare_db.c  conf_ast.c  conf_eval.c  conf_lex.l  conf_lex2.c  conf_yacc.y  db.c  db_disk.c  db_file.c  db_lex.l  db_lex2.c  db_list.c  db_sql.c  do_md.c  e2fsattrs.c  error.c  file.c  fopen.c  gen_list.c  getopt.c  getopt1.c  gnu_regex.c  hashsum.c  list.c  log.c  md.c  progress.c  queue.c  report.c  report_json.c  report_ndjson.c  report_plain.c  rx_rule.c  (+7 more)
tests/: check_aide.c  check_aide.h  check_attributes.c  check_base64.c  check_hashes.c  check_hashsum.c  check_md.c  check_md.h  check_progress.c  check_seltree.c
